--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <meta name="description" content="ARK Pulse Drop — Premium rhythm timing game" />
     <meta name="theme-color" content="#05060a" />
     <title>ARK — Pulse Drop</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=2" />
+    <link rel="icon" type="image/png" sizes="256x256" href="favicon.png?v=2" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
